--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "yajra/laravel-datatables-oracle": "^10.11"
+        "yajra/laravel-datatables-oracle": "^10.11",
+        "nesbot/carbon": "^2.55"
     },
+    
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.19",
